<resources>
    <string name="app_name">Ribbit</string>
    <string name="google_map_key" translatable="false">AIzaSyC9C5yTyUtT_vYICcX79ZUn0W7U4Tyyl_8</string>
    <string name="error_invalid_phone_number">Invalid Phone Number</string>
    <string name="error_enter_valid_value">Invalid Value</string>
    <string name="error_invalid_email">Invalid Email Address</string>
    <string name="error_invalid_password">Password must contain at least 8-16 character</string>
    <string name="error_invalid_pin">Invalid Pin</string>
    <string name="error_invalid_name">Invalid Name</string>
    <string name="error_internet">Internet Connection Error</string>
    <string name="Enable_GPS">Enable GPS</string>
    <string name="Enable_GPS_text">GPS is not enabled. Do you want to go to the settings menu?</string>
    <string name="Enable_GPS_confirm">Configure</string>
    <string name="Enable_GPS_cancel">Cancel</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_warning">Please enable your Location permission for this application.</string>
    <string name="dismiss">OK</string>
    <string name="invalid_first_name">Invalid First name</string>
    <string name="error_non_empty_field">Field cannot be empty.</string>
    <string name="error_dob">Enter Date of Birth</string>
    <string name="loading">Loading…</string>
    <string name="permission_required">Permission Required</string>
    <string name="continue_to">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="error_invalid_ssn">Invalid SSN value</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_dob">Invalid date of birth</string>
    <string name="invalid_last_name">Invalid Last Name</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="plaid_text">Ribbit uses Plaid to verify your bank account information\n\n You can turn off Ribbit’s use of Plaid\n at any time by removing the bank\n account.</string>
    <string name="aapl">$AAPL</string>
    <string name="asset_desc">Apple Inc.</string>
    <string name="stock_price">Stock Price</string>
    <string name="dollar_0">$0</string>
    <string name="percent_124">$124%</string>
    <string name="you_won_1000">You won $1000</string>
    <string name="_5_50_pm">5:50 PM</string>
    <string name="claim_your_prize_before_2_weeks">Claim your prize before 2 weeks</string>
    <string name="prized_won">Prized Won</string>
    <string name="funds_credited">Funds Credited</string>
    <string name="_50_usd">+ $50 USD</string>
    <string name="your_account_was_approved">Your account was approved!</string>
    <string name="you_are_now_eligible_to_fund_your_account_and_begin_trading">You are now eligible to fund your account and begin trading</string>
    <string name="title_residential_address">Enter residential address</string>
    <string name="hint_type_street_name_here">Type street name here</string>
    <string name="apartment_unit">Apartment / Unit</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip code</string>
    <string name="do_you_or_a_family_member_work_for_another_brokerage">Do you or a family member work for another brokerage?</string>
    <string name="if_you_don_t_know_what_this_means_it_probably_does_not_apply_to_you">If you don’t know what this means it probably does not apply to you.</string>
    <string name="we_are_required_to_collect_this_information_by_law_to_help_prevent_insider_trading">We are required to collect this information by law to help prevent insider trading.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="company_name">Company name</string>
    <string name="name_of_person">Name of person</string>
    <string name="relationship_to_person">Relationship to person</string>
    <string name="title_citizenship">Citizenship</string>
    <string name="country">Country</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="we_sent_you_an_email_on">We sent you an email on</string>
    <string name="youremail_gmail_com">youremail@gmail.com</string>
    <string name="with_the_instructions_on_how_to_reset_your_password">with the instructions on how to reset your password</string>
    <string name="are_you_employed">Are you \nemployed?</string>
    <string name="we_are_required_to_collect_this_information_by_law">We are required to collect this information by law.</string>
    <string name="employed">Employed</string>
    <string name="unemployed">Unemployed</string>
    <string name="retired">Retired</string>
    <string name="student">Student</string>
    <string name="where_do_you_work">Where do you\n work?</string>
    <string name="employer_name">Employer name</string>
    <string name="occupation">Occupation</string>
    <string name="what_s_your_investing_experience">What’s your investing experience?</string>
    <string name="none">None</string>
    <string name="not_much">Not Much</string>
    <string name="i_know_what_i_m_doing">I know what I\'m doing</string>
    <string name="i_m_an_expert">I\'m an expert</string>
    <string name="title_10_percent_shareholder">Are you or a family member a senior executive or 10%% shareholder at a publicly traded company?</string>
    <string name="what_is_the_stock_ticker_of_the_company">What is the stock ticker of the company?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="what_s_your_email">What’s your email?</string>
    <string name="someone_example_com">someone@example.com</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="funding_source">Funding Source</string>
    <string name="employment_income">Employment Income</string>
    <string name="investments">Investments</string>
    <string name="inheritance">Inheritance</string>
    <string name="business_income">Business Income</string>
    <string name="savings">Savings</string>
    <string name="family">Family</string>
    <string name="kyc_not_approved">KYC Not Approved</string>
    <string name="we_have_emailed_you_a_few_reasons_why_please_submit_again">We have emailed you a few reasons why. Please submit again.</string>
    <string name="start_over">START OVER</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="what_s_your_legal_name">What’s your legal name?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="_1">+1</string>
    <string name="_234_567_8901">(234) 567-8901</string>
    <string name="email_verified">Email Verified</string>
    <string name="referral_code">Referral Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="skip">Skip</string>
    <string name="reset_password">Reset \nPassword</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="hint_password">****************</string>
    <string name="review_your_application">Review your \napplication</string>
    <string name="please_verify_if_this_information_is_correct">Please verify if this information\n is correct.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="dob">DOB</string>
    <string name="address">Address</string>
    <string name="citizenship">Citizenship</string>
    <string name="ssn">SSN</string>
    <string name="trading_experience">Trading Experience</string>
    <string name="employment_status">Employment Status</string>
    <string name="_10_public_shareholder">10% Public Shareholder</string>
    <string name="stock_ticker">Stock Ticker</string>
    <string name="broker_affiliation">Broker Affiliation</string>
    <string name="brokerage_company">Brokerage Company</string>
    <string name="broker_name">Broker Name</string>
    <string name="relation">Relation</string>
    <string name="next">Next</string>
    <string name="enter_social_security_number">Enter Social Security Number</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="review_terms_and_submit">Review Terms and Submit</string>
    <string name="review">Review</string>
    <string name="submit">Submit</string>
    <string name="submitted">Submitted</string>
    <string name="it_takes_nearly_2_3_days_to_get_approved">It takes nearly 2-3 days to get approved</string>
    <string name="under_review">Under Review</string>
    <string name="verify_identity">Verify Identity</string>
    <string name="as_a_registered_broker_we_are_required_by_law_to_collect_your_social_security_number_ssn">As a registered broker, we are required by law to collect your Social Security number (SSN)</string>
    <string name="we_respect_your_privacy">We respect your privacy</string>
    <string name="the_ssn_will_not_be_shared_without_your_permission_unless_required_by_law">The SSN will not be shared without your permission, unless required by law</string>
    <string name="credit_score_is_not_impacted">Credit score is not impacted</string>
    <string name="the_ssn_is_only_used_to_verify_your_identity_and_will_not_impact_your_credit_score">The SSN is only used to verify your identity, and will not impact your credit score</string>
    <string name="the_ssn_will_be_encrypted_and_secure">The SSN will be encrypted and secure</string>
    <string name="verification">Verification</string>
    <string name="please_enter_the_code_that_was_sent_to">Please enter the code that was sent to:</string>
    <string name="open_email">Open Email</string>
    <string name="didn_t_receive_the_code">Didn’t receive the code? </string>
    <string name="resend_code">Resend Code</string>
    <string name="your_account_is_linked">Your account is linked</string>
    <string name="now_you_can_go_fund_your_account_to_begin_trading">Now you can go fund your account to begin trading!</string>
    <string name="let_s_connect_your_bank_account">Let’s connect your bank account</string>
    <string name="add_funds">Add Funds</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="_25">+$25</string>
    <string name="_50">+$50</string>
    <string name="_100">+$100</string>
    <string name="_500">+$500</string>
    <string name="bank_name">Bank Name</string>
    <string name="available_0_00">Available $0.00</string>
    <string name="change">CHANGE</string>
    <string name="account_xxxx">Account ***xxxx</string>
    <string name="your_information_is_safe_with_us_the_funds_will_be_deducted_within_a_few_days_from_now">Your information is safe with us. The funds will be deducted within a few days from now.</string>
    <string name="bank_of_america">Bank of America</string>
    <string name="remove_bank_account">Remove Bank Account?</string>
    <string name="remove">Remove</string>
    <string name="go_back">Go Back</string>
    <string name="funds_added">Funds Added!</string>
    <string name="deposit_initiated">Deposit Initiated</string>
    <string name="_550_added">$550 Added</string>
    <string name="_4_50_pm">4:50 PM</string>
    <string name="deposit_cancelled">Deposit Cancelled</string>
    <string name="deposit_completed">Deposit Completed</string>
    <string name="available_to_trade">Available to trade</string>
    <string name="done">Done</string>
</resources>