<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_white_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/_24sdp"
            android:paddingEnd="@dimen/_24sdp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.173">

                <TextView
                    style="@style/TextStyleHeading"
                    android:text="@string/login" />

                <com.stockly.android.widgets.CustomEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:hint="@string/someone_example_com"
                    android:inputType="textEmailAddress"
                    app:ErrorMessage="@string/error_invalid_email"
                    app:TitleMessage="Email"
                    app:type="Email" />

                <com.stockly.android.widgets.CustomEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    app:ErrorMessage="@string/error_invalid_password"
                    app:TitleMessage="Password"
                    app:type="Password" />

                <TextView
                    android:id="@+id/forgot_pass"
                    style="@style/TextStyle.Medium"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/forgot_password"
                    android:textColor="#989C9D"
                    android:textSize="15sp" />


            </LinearLayout>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/next"
                style="@style/AnimatedButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_100sdp"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/continue_to"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="@dimen/_2sdp" />

            <TextView
                android:id="@+id/sign_up_text"
                style="@style/TextStyle.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="88dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="#6D7F86"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.340"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sign_up"
                style="@style/TextStyle.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="88dp"
                android:text="@string/sign_up"
                android:textColor="@color/textLightBlue"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/sign_up_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/message"
            layout="@layout/message_dialog" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>