<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_white_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/_24sdp"
            android:paddingEnd="@dimen/_24sdp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.211">

                <TextView
                    style="@style/TextStyleHeading"
                    android:text="@string/reset_password" />

                <TextView
                    style="@style/TextStyle.SemiBold"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/enter_your_new_password"
                    android:textColor="@color/hintDarkColor"
                    android:textSize="22sp" />

                <com.stockly.android.widgets.CustomEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    app:ErrorMessage="@string/error_invalid_password"
                    app:type="Password" />

                <com.stockly.android.widgets.CustomEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    app:ErrorMessage="@string/error_invalid_password"
                    app:type="Password" />


            </LinearLayout>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/next"
                style="@style/AnimatedButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_80sdp"
                android:enabled="false"
                android:gravity="center"
                android:text="Change Password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="@dimen/_2sdp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/message"
            layout="@layout/message_dialog" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>